semi-fixed positioning again and font size on mobile altered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ a {
     text-decoration: none;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 /* Navbar section */
 #mobile-nav {
     display: none;
@@ -186,6 +190,7 @@ li a {
 }
 
 .projects {
+    width: 100%;
     display: flex;
     flex-flow: wrap;
     justify-content: center;
@@ -201,7 +206,7 @@ li a {
 
 .project-1 {
     position: relative;
-    width: 400px;
+    width: 800px;
     height: 400px;
     background: white;
     box-shadow: var(--shadow);
@@ -346,7 +351,7 @@ footer {
     }
 
     #mobile-nav {
-        display: inline-block;
+        display: block;
     }
 
     .mobile-nav-bar {
@@ -361,13 +366,112 @@ footer {
         display: flex;
         align-items: center;
         list-style: none;
-        justify-content: space-between;
-        padding: 20px;
+        justify-content: space-evenly;
+        padding: 10px;
     }
 
     .project-1 {
         position: relative;
-        width: 250px;
+        width: 400px;
+        height: 400px;
+        background: white;
+        box-shadow: var(--shadow);
+        margin: 50px;
+        background-image: url("../images/blackpink.jpg");
+        background-size: cover;
+        background-position: center;
+        border-radius: 10px;
+    }
+
+    .project-2 {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        background: white;
+        box-shadow: var(--shadow);
+        margin: 50px;
+        background-image: url("../images/blackpink.jpg");
+        background-size: cover;
+        background-position: center;
+        border-radius: 10px;
+    }
+
+    .project-3 {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        background: white;
+        box-shadow: var(--shadow);
+        margin: 50px;
+        background-image: url("../images/blackpink.jpg");
+        background-size: cover;
+        background-position: center;
+        border-radius: 10px;
+    }
+
+    .about-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        background-size: cover;
+        font-size: 1.5rem;
+        position: relative;
+        margin: 5%;
+    }
+
+    .about-text {
+        margin-left: 20px;
+        width: 100%;
+        font-size: 1.5rem;
+    }
+
+    .icons i {
+        font-size: 2rem;
+        padding: 10px;
+        margin-left: -10px;
+    }
+
+    #me {
+        /* position: absolute;
+        margin: 0px 35% 10px 35%; */
+        font-size: 1rem;
+        margin: 20px 20px 100px 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .header nav {
+        display: none;
+    }
+
+    #mobile-nav {
+        display: block;
+    }
+
+    .mobile-nav-bar {
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        z-index: 5;
+    }
+
+    ul {
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        list-style: none;
+        justify-content: space-evenly;
+        padding: 10px;
+    }
+
+    .project-1 {
+        position: relative;
+        width: 350px;
         height: 400px;
         background: white;
         box-shadow: var(--shadow);
@@ -381,7 +485,7 @@ footer {
     .project-2 {
         position: relative;
         width: 250px;
-        height: 400px;
+        height: 300px;
         background: white;
         box-shadow: var(--shadow);
         margin: 50px;
@@ -394,7 +498,7 @@ footer {
     .project-3 {
         position: relative;
         width: 250px;
-        height: 400px;
+        height: 300px;
         background: white;
         box-shadow: var(--shadow);
         margin: 50px;
@@ -418,7 +522,7 @@ footer {
     .about-text {
         margin-left: 20px;
         width: 100%;
-        font-size: 0.75rem;
+        font-size: 1.5rem;
     }
 
     .icons i {
@@ -431,7 +535,7 @@ footer {
         /* position: absolute;
         margin: 0px 35% 10px 35%; */
         font-size: 1rem;
-        margin: 20px 20px 130px 20px;
+        margin: 20px 20px 100px 20px;
         display: flex;
         justify-content: center;
         align-items: center;
